log
Fri, Mar 28, 2025 11:36:00 AM: 
 list.c | 37 ++++++++++++++++++++++++++-----------
 1 file changed, 26 insertions(+), 11 deletions(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:34:19: error: statement with no effect [-Werror=unused-value]
     lista -> tail == NULL;
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
25021aa
Fri, Mar 28, 2025 11:37:00 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
50f01e6
Fri, Mar 28, 2025  2:51:50 PM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
50042d9
Fri, Mar 28, 2025  2:59:32 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
669e0e3
Fri, Mar 28, 2025  3:03:10 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
9ef4e92
Fri, Mar 28, 2025  3:03:42 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
0105549
Fri, Mar 28, 2025  3:04:31 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
8526379
Fri, Mar 28, 2025  3:05:12 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
3075f37
Sat, Mar 29, 2025  8:19:11 AM: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:75:25: error: 'return' with a value, in function returning void [-Werror]
     return (list ->head ->data);
            ~~~~~~~~~~~~~^~~~~~~
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5f009f5
Sat, Mar 29, 2025  8:19:52 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:75:12: error: 'return' with a value, in function returning void [-Werror]
     return (aux);
            ^
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
20780d5
Sat, Mar 29, 2025  8:21:11 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:75:17: error: 'return' with a value, in function returning void [-Werror]
     return (aux -> data);
            ~~~~~^~~~~~~~
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4b24980
Sat, Mar 29, 2025  8:29:32 AM: 
 list.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:82:23: error: 'return' with a value, in function returning void [-Werror]
     return (list->head->data);
            ~~~~~~~~~~~^~~~~~~
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a13add5
Sat, Mar 29, 2025  8:29:57 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:82:17: error: 'return' with a value, in function returning void [-Werror]
     return (list->head);
            ~~~~~^~~~~~~
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4feebcf
Sat, Mar 29, 2025  8:30:23 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:82:12: error: 'return' with a value, in function returning void [-Werror]
     return aux;
            ^~~
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
42d0ec9
Sat, Mar 29, 2025  8:30:47 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:82:15: error: 'return' with a value, in function returning void [-Werror]
     return aux->data;
            ~~~^~~~~~
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
72e12de
Sat, Mar 29, 2025  8:32:46 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:82:12: error: 'return' with a value, in function returning void [-Werror]
     return aux;
            ^~~
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9ab52a2
Sat, Mar 29, 2025  8:33:01 AM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:82:15: error: 'return' with a value, in function returning void [-Werror]
     return aux->data;
            ~~~^~~~~~
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
799510f
Sat, Mar 29, 2025  8:33:35 AM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  10|2
total_score: 45/70
bb53565
Sat, Mar 29, 2025  8:34:13 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
ffcde56
Sat, Mar 29, 2025  8:34:28 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
97fb8a0
Sat, Mar 29, 2025  8:42:11 AM: 
 list.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  10|2
total_score: 45/70
702e099
Sat, Mar 29, 2025  8:53:38 AM: 
 list.c | 24 +++++-------------------
 1 file changed, 5 insertions(+), 19 deletions(-)
 tests:  10|2
total_score: 45/70
a018bc2
Sat, Mar 29, 2025  9:56:24 AM: 
 list.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
c040b83
Sat, Mar 29, 2025 11:56:21 AM: 
 list.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:135:1: error: expected ';' before '}' token
 }
 ^
Compilation failed
06e691e
Sat, Mar 29, 2025 11:56:32 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6de2db8
Sat, Mar 29, 2025 11:57:30 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
756ee43
